--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "rebuildDB": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
