--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "rebuildDB": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate"
+    "rebuildDB": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "xlsx": "^0.18.5"
   }
 }
