--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@faker-js/faker": "^6.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-handlebars": "^6.0.5",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "imgur": "^2.2.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
+    "tslib": "^2.4.0",
     "xlsx": "^0.18.5"
   }
 }
