--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "tslib": "^2.4.0",
