test: install and setup database config

--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,11 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "password",
+    "database": "art_collection_test_database",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "use_env_variable": "CLEARDB_DATABASE_URL"
