chore: install coverage tool: nyc

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+.nyc_output/
+coverage/
 
 # Dependency directories
 node_modules/
