--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./bin/www",
     "rebuildDB": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
     "rebuildDB_test": "SET \"NODE_ENV=test\" && npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
-    "test": "SET \"NODE_ENV=test\" && mocha test --exit --timeout 5000"
+    "test": "SET \"NODE_ENV=test\" && mocha test --exit --timeout 5000",
+    "coverage": "nyc npm run test"
   },
   "dependencies": {
     "@faker-js/faker": "^6.2.0",
@@ -36,7 +37,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
-    "sequelize-test-helpers": "^1.4.3",
+    "nyc": "^15.1.0",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4"
   }
