--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "imgur": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
