--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "artcollection",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "^18.13.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
@@ -11,36 +14,36 @@
     "coverage": "nyc npm run test"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.2.0",
+    "@faker-js/faker": "^7.6.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.1",
-    "express": "~4.16.1",
-    "express-handlebars": "^6.0.5",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
+    "dotenv": "^16.0.3",
+    "express": "~4.18.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
+    "hbs": "~4.2.0",
+    "http-errors": "~2.0.0",
     "imgur": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.4",
-    "mysql2": "^2.3.3",
+    "morgan": "~1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.19.0",
-    "sequelize-cli": "^6.4.1",
-    "tslib": "^2.4.0",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2",
+    "tslib": "^2.4.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "sinon": "^14.0.0",
-    "supertest": "^6.2.4"
+    "sinon": "^15.0.1",
+    "supertest": "^6.3.3"
   }
 }
