Feat: add Facebook login

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 IMGUR_CLIENT_ID=
 JWT_SECRET=
 SESSION_SECRET=
+FACEBOOK_ID=SKIP
+FACEBOOK_SECRET=SKIP
+FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
