--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ SESSION_SECRET=
 FACEBOOK_ID=SKIP
 FACEBOOK_SECRET=SKIP
 FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
+
+# GCP
+INSTANCE_CONNECTION_NAME=projectID:area:SQLinstanceID
+DB_NAME=database
+DB_USER=username
+DB_PASS=password
+SQL_HOST=publicIP
