feat: add GET /reservations/:id/payment

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ SESSION_SECRET=
 FACEBOOK_ID=SKIP
 FACEBOOK_SECRET=SKIP
 FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
+URL=http://...
 
 # GCP
 INSTANCE_CONNECTION_NAME=projectID:area:SQLinstanceID
@@ -11,3 +12,8 @@ DB_NAME=database
 DB_USER=username
 DB_PASS=password
 SQL_HOST=publicIP
+
+# New Web Pay
+HASH_KEY=
+HASH_IV=
+MERCHANT_ID=
