--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-errors": "~2.0.0",
     "imgur": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mailchecker": "^6.0.1",
     "method-override": "^3.0.0",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
